# DS-Lv-2

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
notebook/: learn_ds.ipynb
